--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </ul>
               </div>
             <li class="team-card">
-              <img src="./images/img-1.jpg" width="264" alt="Tom Ford" />
+              <img src="./images/img-1.jpg" srcset="./images/img1.jpg 1x, ./images/team/tom@2x.jpg 2x" width="264" alt="Tom Ford" />
               <div class="tim-nameinfo">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="title-advantages">Frontend Developer</p>
@@ -259,7 +259,7 @@
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/img-2.jpg" width="264" alt="Camila Garcia" />
+              <img src="./images/img-2.jpg" srcset="./images/img2.jpg 1x, images/team/camila@2x.jpg 2x" width="264" alt="Camila Garcia" />
               <div class="tim-nameinfo">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="title-advantages">Marketing</p>
@@ -303,7 +303,7 @@
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/img-3.jpg" width="264" alt="Daniel Wilson" />
+              <img src="./images/img-3.jpg" srcset="./images/img3.jpg 1x, images/team/daniel@2x.jpg 2x" width="264" alt="Daniel Wilson" />
               <div class="tim-nameinfo">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="title-advantages">UI Designer</p>
